test/valid/60294_wildcards/wildcards.mag
-- Author: 60294, Pedro Rosa
fun discard(_, _): (Int, Bool) -> Unit = unit
fun main(_): Unit -> Unit = 
    print(discard(100, true))